language/move-lang/tests/move_check/parser/missing_angle_brace_close.exp
error[E01002]: unexpected token
  ┌─ tests/move_check/parser/missing_angle_brace_close.move:3:22
  │
3 │         let x = t<u64;
  │                  -   ^ Expected '>'
  │                  │    
  │                  To match this '<'
  │                  Perhaps you need a blank space before this '<' operator?

